-------------------------- soilDB 1.6.3 (2015-11-20) ----------------------------
* new spatial query helper functions for SDA
* re-named SSURGO_spatial_query() to SoilWeb_spatial_query(), this function may be phased-out due to spatial support now available in SDA
* removed MUKEYS_by_ll_bbox() function, no longer needed and web-service may be disabled at any time
* mapunit_geom_by_ll_bbox() will probably be removed in the near future with an SDA-based alternative
* KSSL data updated (server-side) to June 2015 snapshot, "site_id" column removed from fetchKSSL() results

-------------------------- soilDB 1.6 (2015-08-19) ----------------------------
* soilDB now imports from the `reshape` package, will transition to `reshape2` with soilDB 2.0
* fetchHenry() officially added, complete with documentation
* SDA_query() undergoing some upgrades, no longer requies SSOAP / XMLSchema packages
* SSOAP / XMLSchema packages no longer in 'suggests' list

-------------------------- soilDB 1.5-8 (2015-08-13) ----------------------------
* fetchKSSL() gets an argument for downloading data by MLRA

-------------------------- soilDB 1.5-7 (2015-03-10) ----------------------------
* updated the `loafercreek` and `gopheridge` sample datasets

-------------------------- soilDB 1.5-3 (2015-03-10) ----------------------------
* nullFragsAreZero argument to fetchNASIS() reset to TRUE, new documentation pending
* consolidate of messages printed when running fetchNASIS()
* introduction of new option "soilDB.verbose" (default is FALSE) for increasing the level of QC information printed
* new tutorial on fetchNASIS()

-------------------------- soilDB 1.5-2 (2015-02-24) ----------------------------
* RODBC temporarily moved from "suggested" package to "imported" package... not a good idea, reverted to "suggested"

-------------------------- soilDB 1.4-5 (2015-01-20) ----------------------------
* mix_and_clean_colors() now returns back-transformed, mixed, munsell colors